# locallm-cli

./: .gitattributes  .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  RAG_GUIDE.md  README.md  locallm-cli.code-workspace  locallm.bat  locallm.ps1  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  開發問題.txt
data/chroma_db/: chroma.sqlite3
data/kb_admin/chroma_db/: chroma.sqlite3
data/knowledge_base/: documents.json  metadata.json
data/knowledge_base/chroma_db/: chroma.sqlite3
docs/: FEATURE_UPDATE.md  FILE_CREATION_GUIDE.md  FIXED.md  INSTALL.md  MODEL_SWITCHING.md  OFFICE_FILES.md  README.md  SETUP_COMPLETE.md  SYSTEM_COMMANDS.md
scripts/: README.md  install.bat  install.ps1  locallm.bat  locallm_entry.py  setup_global.py  verify_install.py
src/: README.md  __init__.py  main.py
src/data/kb_admin/chroma_db/: chroma.sqlite3
src/data/knowledge_base/chroma_db/: chroma.sqlite3
src/gui/: __init__.py  simple_gui.py
src/models/: __init__.py  ollama_client.py
src/rag/: __init__.py  pdf_processor.py  rag_core.py
src/tools/: __init__.py  batch_processor.py  data_visualizer.py  encryption_tools.py  file_classifier.py  file_tools.py  git_manager.py  kb_admin.py  knowledge_base.py  ocr_tools.py
tests/: README.md  __init__.py  debug_commands.py  test_commands.py  test_create.py  test_global.py  test_ui.py
